--- a/src/css/contactForm.css
+++ b/src/css/contactForm.css
@@ -22,6 +22,7 @@
 
 .form-group {
   margin-bottom: 25px;
+  position: relative;
 }
 
 .form-group label {
@@ -34,9 +35,26 @@
 .form-group textarea {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 3px solid var(--blue);
   border-radius: 4px;
   font-size: 16px;
+  color: var(--black);
+  font-weight: 500;
+  transition: all 0.7s ease-in-out;
+  outline: none !important;
+  z-index: 1000;
+}
+
+.form-group input:focus,
+.form-group input:valid {
+  background-color: var(--blue);
+  color: var(--white);
+}
+
+.form-group textarea:focus,
+.form-group textarea:valid {
+  background-color: var(--blue);
+  color: var(--white);
 }
 
 .form-group textarea {
