--- a/src/style.css
+++ b/src/style.css
@@ -413,14 +413,15 @@ span svg {
   margin-right: 10px;
 }
 .footer {
-  text-align: center;
-  background-color: black;
-  color: white;
-  font-weight: 600;
   position: absolute;
   right: 0;
   left: 0;
   bottom: 0;
+  text-align: center;
+  background-color: var(--darkblue);
+  color: white;
+  font-weight: 600;
+  border-top: solid 1px var(--black);
 }
 @media screen and (max-width: 1231px) {
   section .oil img {
